# cook-county-analysis

./: .gitignore  CITATION.cff  CITATIONS.cff  Dockerfile  LICENSE  Makefile  README.md  check.ipynb  coded_addresses.csv  columns.txt  docker-compose.yml  environment.yml  go.mod  go.sum  justfile  main.go  main.py  mkdocs.yml  not_final_README.md  notes.md  old_distance.go  pyproject.toml  records.csv  requirements.txt  sample_addresses.csv  search.sh  tasks.md  tasks.txt  todo.md
app/: main.py  main2.py
cmd/: README.md
cmd/calculate/: README.md  main.go
cmd/calculator/: main.go
cmd/distance/: main.go
cmd/scrape/: README.md  main.go
data/: README.md  geocoded_medical_centers.csv  records_with_spatial_data.csv
data/output/: dense_results.csv  finalized.csv.REMOVED.git-id  report.html.REMOVED.git-id
docs/: index.md
docs/api-reference/: async-utils.md  case-archive-utils.md  distance-utils.md  pharmacy-utils.md  spatial-join.md
notebooks/: README.md  amia_paper_stats.ipynb  analysis.ipynb  calculate_distances.ipynb  checking.ipynb  checking_geocoding_service.ipynb  checking_lat-long.ipynb  clean_geocode_v3.ipynb  cleaning_addresses.ipynb  combine.ipynb  db_analysis.ipynb  drug_analysis.ipynb  geocode.py  geocode_runner.ipynb  scratch.ipynb
notebooks/xylazine/: .Rhistory  go.mod  go.sum  main.go
notebooks/xylazine_analysis/: README.md  distance.go  filter_data.py  location_groups.py  matcher.R  med_center_matches.ipynb  mercator.R  plot_ripleysk.ipynb  plot_time.ipynb  project_data.py  projected_ripleys.R  python_trial.ipynb  records_all.csv  ripleys-k.R  splitter.py
reports/: first_report.html
scripts/: README.md  async-attempt.py  build.sh  calculate-distance  case_archive_runner.py  cleanup.sh  data_formatter.py  data_runner.py  distance_runner.py  download_census_tract_shapefiles.sh  download_landuse_shapefiles.sh  drug_detection.R  drug_extraction.py  fetch_release_data.sh  fetch_spatial_data.sh  generate_report.py  geocode.sh  join_drugs.py  join_files.py  jsonl_to_csv.sh  land_use_runner.py  merge_runner.py  pharmacy_runner.py  postprocess.py  reformat_drugs.py  run.sh  run_drugs_and_format.sh  run_geo.sh  spatial_join.py  spatial_join_runner.py  test_scripts.py  transform_drugs.py
tests/: drug_counts.csv  interactive.py  opioid_related_counts.csv  street counts.csv  test_case_archive_util.py  test_distance_utils.py  test_output.py  test_pharmacy_utils.py  total_cases_per_year.csv
xylazine/: .RData  check_med_centers.ipynb  filter_data.ipynb  get_ids_and_groups.ipynb  groupings.py  main.go  matcher.R  plot_ripleysk.ipynb  pyproject.toml  ripleys-k.R  splitter.py  table1.py  xylazine_analyis.ipynb
(+13 files in other folders)
