[tool.poetry]
name = "geocoding"
version = "1.0.0"
description = "Chicago Medical Examiner x Land Use Analysis"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
readme = 'README.md'
homepage = 'https://github.com/UK-IPOP/geocoding'
repository = 'https://github.com/UK-IPOP/geocoding'
documentation = 'https://uk-ipop.github.io/geocoding/'
license = 'GPL-3.0-or-later'


[tool.poetry.dependencies]
python = "^3.9"
Rtree = "^0.9.7"
sodapy = "^2.1.0"
arcgis = "^1.9.1"
geopy = "^2.2.0"
python-dotenv = "^0.19.1"
rich = "^10.13.0"


[tool.poetry.dev-dependencies]
black = "flake8"
flake8 = "^3.9.0"
isort = "^5.8.0"
pytest = "^6.2.4"
ipykernel = "^6.5.0"
coverage = "^6.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
