[tool.poetry]
name = "geocoding"
version = "1.0.0"
description = "Chicago Medical Examiner x Land Use Analysis"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
readme = 'README.md'
homepage = 'https://github.com/UK-IPOP/geocoding'
repository = 'https://github.com/UK-IPOP/geocoding'
documentation = 'https://uk-ipop.github.io/geocoding/'
license = 'GPL-3.0-or-later'

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
sodapy = "^2.1.1"
pandas = "^1.4.3"
rich = "^12.5.1"
python-dotenv = "^0.20.0"
usaddress-scourgify = "^0.2.4"
pytest = "^7.1.2"
arcgis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
