[tool.poetry]
name = "cook-county-analysis"
version = "0.1.0"
description = "Analysis for Cook County Medical Examiner's Archives"
authors = ["Nick Anthony <nanthony007@gmail.com>"]
license = "GPL3"
readme = "README.md"
packages = [{include = "cook_county_analysis"}]

[tool.poetry.dependencies]
python = "^3.10"
geopandas = "^0.11.1"
ipykernel = "^6.15.3"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
