[tool.poetry]
name = "xylazine"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
plotly = "^5.10.0"
pandas = "^1.4.3"
ipykernel = "^6.15.1"
scipy = "^1.9.0"
seaborn = "^0.11.2"
nbformat = "^5.4.0"
rpy2 = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
